# fronsduk

./: .gitignore  LICENSE  README.md  fronsduk.cabal
asm/: add.asm  even.asm  fac.asm  hello.asm
extra/emacs/: flycheck-qzitche.el  fronsduk-mode.el  qzitche-mode.el
qzitche/: add.qzt  even.qzt  factorial.qzt  functional.qzt  hello-world.qzt  qsort.qzt
resources/: SECD Virtual Machine
src/: Assembler.hs  Bytecode.hs  Disassembler.hs  Interpreter.hs  Machine.hs  Qzitchec.hs
src/Qzitche/: Compile.hs  Parse.hs
