name:                fronsduk
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Steven Rémot
maintainer:          steven.remot@telecom-paristech.org
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable fronsduk
  -- main-is:
  -- other-modules:
  build-depends:       base ==4.6.*, parsec
  hs-source-dirs:      src