name:                fronsduk
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Steven Rémot
maintainer:          steven.remot@telecom-paristech.org
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable fronsduk
  hs-source-dirs:      src
  main-is: Interpreter.hs
  ghc-options: -main-is Interpreter
  build-depends:
    base ==4.6.*,
    binary,
    bytestring

executable fronsduk-assemble
  hs-source-dirs: src
  main-is: Assembler.hs
  ghc-options: -main-is Assembler
  build-depends:
    base == 4.6.*,
    parsec,
    binary,
    bytestring

executable fronsduk-disassemble
  hs-source-dirs: src
  main-is: Disassembler.hs
  ghc-options: -main-is Disassembler
  build-depends:
    base == 4.6.*,
    binary,
    bytestring
